ios/include/FlutterFilamentApi.h

typedef int32_t EntityId;
FLUTTER_PLUGIN_EXPORT void render(
					     const void* const viewer, 
					     uint64_t frameTimeInNanos, 
					     void* pixelBuffer, 
					     void (*callback)(void *buf, size_t size, void *data), 
					     void* data
					 );
FLUTTER_PLUGIN_EXPORT void remove_asset(const void* const viewer, EntityId asset);
FLUTTER_PLUGIN_EXPORT void clear_assets(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void transform_to_unit_cube(void* assetManager, EntityId asset);
FLUTTER_PLUGIN_EXPORT void set_position(void* assetManager, EntityId asset, float x, float y, float z);
FLUTTER_PLUGIN_EXPORT void set_rotation(void* assetManager, EntityId asset, float rads, float x, float y, float z);
FLUTTER_PLUGIN_EXPORT void set_scale(void* assetManager, EntityId asset, float scale);
FLUTTER_PLUGIN_EXPORT void set_camera_exposure(const void* const viewer, float aperture, float shutterSpeed, float sensitivity);
FLUTTER_PLUGIN_EXPORT void set_camera_position(const void* const viewer, float x, float y, float z);
FLUTTER_PLUGIN_EXPORT void set_camera_rotation(const void* const viewer, float rads, float x, float y, float z);
FLUTTER_PLUGIN_EXPORT void set_camera_model_matrix(const void* const viewer, const float *const matrix);
FLUTTER_PLUGIN_EXPORT void set_camera_focal_length(const void* const viewer, float focalLength);
FLUTTER_PLUGIN_EXPORT void set_camera_focus_distance(const void* const viewer, float focusDistance);