lib/generated_bindings.dart


  void remove_asset(
    ffi.Pointer<ffi.Void> viewer,
    int asset,
  ) {
    return _remove_asset(
      viewer,
      asset,
    );
  }

  late final _remove_assetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>>('remove_asset');
  late final _remove_asset =
      _remove_assetPtr.asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void clear_assets(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _clear_assets(
      viewer,
    );
  }

  late final _clear_assetsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'clear_assets');
  late final _clear_assets =
      _clear_assetsPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void load_texture(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> assetPath,
    int renderableIndex,
  ) {
    return _load_texture(
      assetManager,
      asset,
      assetPath,
      renderableIndex,
    );
  }

  late final _load_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('load_texture');
  late final _load_texture = _load_texturePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>, int)>();

  void set_texture(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
  ) {
    return _set_texture(
      assetManager,
      asset,
    );
  }

  late final _set_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>>('set_texture');
  late final _set_texture =
      _set_texturePtr.asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void transform_to_unit_cube(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
  ) {
    return _transform_to_unit_cube(
      assetManager,
      asset,
    );
  }

  late final _transform_to_unit_cubePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, EntityId)>>('transform_to_unit_cube');
  late final _transform_to_unit_cube = _transform_to_unit_cubePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void set_position(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    double x,
    double y,
    double z,
  ) {
    return _set_position(
      assetManager,
      asset,
      x,
      y,
      z,
    );
  }

  late final _set_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float,
              ffi.Float, ffi.Float)>>('set_position');
  late final _set_position = _set_positionPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, double, double, double)>();

  void set_rotation(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    double rads,
    double x,
    double y,
    double z,
  ) {
    return _set_rotation(
      assetManager,
      asset,
      rads,
      x,
      y,
      z,
    );
  }

  late final _set_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Float,
              ffi.Float, ffi.Float, ffi.Float)>>('set_rotation');
  late final _set_rotation = _set_rotationPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Void>, int, double, double, double, double)>();

  void set_scale(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    double scale,
  ) {
    return _set_scale(
      assetManager,
      asset,
      scale,
    );
  }

  late final _set_scalePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, EntityId, ffi.Float)>>('set_scale');
  late final _set_scale = _set_scalePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, double)>();

  void set_camera_exposure(
    ffi.Pointer<ffi.Void> viewer,
    double aperture,
    double shutterSpeed,
    double sensitivity,
  ) {
    return _set_camera_exposure(
      viewer,
      aperture,
      shutterSpeed,
      sensitivity,
    );
  }

  late final _set_camera_exposurePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('set_camera_exposure');
  late final _set_camera_exposure = _set_camera_exposurePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void set_camera_position(
    ffi.Pointer<ffi.Void> viewer,
    double x,
    double y,
    double z,
  ) {
    return _set_camera_position(
      viewer,
      x,
      y,
      z,
    );
  }

  late final _set_camera_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('set_camera_position');
  late final _set_camera_position = _set_camera_positionPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void set_camera_rotation(
    ffi.Pointer<ffi.Void> viewer,
    double rads,
    double x,
    double y,
    double z,
  ) {
    return _set_camera_rotation(
      viewer,
      rads,
      x,
      y,
      z,
    );
  }

  late final _set_camera_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float, ffi.Float)>>('set_camera_rotation');
  late final _set_camera_rotation = _set_camera_rotationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, double, double, double, double)>();

  void set_camera_model_matrix(
    ffi.Pointer<ffi.Void> viewer,
    ffi.Pointer<ffi.Float> matrix,
  ) {
    return _set_camera_model_matrix(
      viewer,
      matrix,
    );
  }

  late final _set_camera_model_matrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Float>)>>('set_camera_model_matrix');
  late final _set_camera_model_matrix = _set_camera_model_matrixPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Float>)>();

  void set_camera_focal_length(
    ffi.Pointer<ffi.Void> viewer,
    double focalLength,
  ) {
    return _set_camera_focal_length(
      viewer,
      focalLength,
    );
  }

  late final _set_camera_focal_lengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Float)>>('set_camera_focal_length');
  late final _set_camera_focal_length = _set_camera_focal_lengthPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void set_camera_focus_distance(
    ffi.Pointer<ffi.Void> viewer,
    double focusDistance,
  ) {
    return _set_camera_focus_distance(
      viewer,
      focusDistance,
    );
  }

  late final _set_camera_focus_distancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Float)>>('set_camera_focus_distance');
  late final _set_camera_focus_distance = _set_camera_focus_distancePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();
}

class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

class ResourceBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int id;
}

typedef renderCallback = ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> viewer)>>;
typedef EntityId = ffi.Int32;

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 33;

const int _SYS_CDEFS_H = 1;

const int __THROW = 1;

const int __THROWNL = 1;

const int __glibc_c99_flexarr_available = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI = 0;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int _BITS_TYPES_H = 1;

const int __TIMESIZE = 64;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 2147483647;

const int __WCHAR_MIN = -2147483648;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -9223372036854775808;

const int INT_FAST32_MIN = -9223372036854775808;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 9223372036854775807;

const int INT_FAST32_MAX = 9223372036854775807;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = -1;

const int UINT_FAST32_MAX = -1;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int SIZE_MAX = -1;

const int WCHAR_MIN = -2147483648;

const int WCHAR_MAX = 2147483647;

const int WINT_MIN = 0;

const int WINT_MAX = 4294967295;
